# pytest-diff

./: .gitignore  .mise.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NEXT_SESSION.md  README.md  pyproject.toml  test_parser_manual.py
.claude/commands/: ship.md
.github/workflows/: ci.yml  release.yml
docs/: IMPLEMENTATION_PLAN.md
python/pytest_diff/: __init__.py  _config.py  _core.pyi  _git.py  _storage_ops.py  plugin.py
python/pytest_diff/storage/: __init__.py  base.py  s3.py
python/pytest_difftest/: __init__.py  _config.py  _core.pyi  _git.py  _storage_ops.py  _xdist.py  cli.py  plugin.py
python/pytest_difftest/storage/: __init__.py  local.py  s3.py
python/tests/: conftest.py  test_baseline.py  test_baseline_mode.py  test_basic.py  test_diff_mode.py  test_edge_cases.py  test_end_to_end.py  test_ignore_collect.py  test_inspect.py  test_plugin_config.py  test_rust_core.py  test_skip_xfail.py  test_storage.py  test_xdist.py
rust/: Cargo.toml
rust/src/: cache.rs  database.rs  fingerprint.rs  fingerprint_cache.rs  lib.rs  parser.rs  schema.sql  tracer.rs  types.rs
