[package]
name = "pytest-diff-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "pytest_diff_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
ruff_python_parser = "0.3"
ruff_python_ast = "0.3"
ruff_text_size = "0.3"
rusqlite = { version = "0.31", features = ["bundled", "blob"] }
rayon = "1.8"
dashmap = "5.5"
ahash = "0.8"
crc32fast = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
blake3 = "1.5"
parking_lot = "0.12"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.10"
proptest = "1.4"

[[bench]]
name = "benchmarks"
harness = false
